--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
     height: 80vh;
     padding: 0% 10% 0% 10%;
     display: grid;
-    /* grid-template-columns: repeat(auto-fill,minmax(400px,1fr)); */
-    grid-template-columns: repeat(3, 450px);
+    grid-template-columns: repeat(auto-fill,minmax(400px,1fr));
+    /* grid-template-columns: repeat(3, 450px); */
     gap: 20px;
 }
 .cards>div{
@@ -28,8 +28,8 @@
         height: 80vh;
         padding: 0% 10% 0% 10%;
         display: grid;
-        /* grid-template-columns: repeat(auto-fill,minmax(180px,1fr)); */
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(auto-fill,minmax(180px,1fr));
+        /* grid-template-columns: repeat(2, 1fr); */
         grid-template-rows: auto;
         gap: 10px;
     }
@@ -39,8 +39,8 @@
         height: 80vh;
         padding: 0% 10% 0% 10%;
         display: grid;
-        /* grid-template-columns: repeat(auto-fill,minmax(110px,1fr)); */
-        grid-template-columns: repeat(1,1fr);
+        grid-template-columns: repeat(auto-fill,minmax(110px,1fr));
+        /* grid-template-columns: repeat(1,1fr); */
         gap: 8px;
     }
 }
